infra/k8s/ig-server.pod.yaml
apiVersion: v1
kind: Pod
metadata: 
  name: ig-server
spec:
  containers:
    - name: ig-server
      image: weizai133/ig-clone:0.1
