infra/k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: ig.com
      http:
        paths:
          - path: /
            backend:
              serviceName: ig-server-srv
              servicePort: 3001
